--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "groq-sdk": "^0.8.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
