--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -4,7 +4,8 @@
       "module": "CommonJS",
       "outDir": "dist",
       "sourceMap": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "resolveJsonModule": true
   },
   "include": ["./src"]
   // "exclude": ["./src/web/**/*"]
